fix(search): no autocomplete results on mobile (#318)
* fix(search): no autocomplete results on mobile

* fix écart après 'lieux et adresses'

* fix affichage en mode classique

* fix pas de couches

--- a/src/packages/CSS/Controls/SearchEngine/GPFsearchEngine.css
+++ b/src/packages/CSS/Controls/SearchEngine/GPFsearchEngine.css
@@ -141,6 +141,7 @@ input[id^=GPadvancedSearchSubmit] {
 
 .GPlabelTitle {
   font-weight: bold;
+  margin-bottom: 0;
 }
 
 [id^="GPautocompleteResults-"] {
